[gd_scene load_steps=2 format=3 uid="uid://c9z5n7p8q9r0s"]

[ext_resource type="Script" path="res://scripts/sleep/sleep_results_screen.gd" id="1_results"]

[node name="SleepResultsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_results")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "☾ Morning Has Arrived ☾"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="QualityLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Good Sleep"
horizontal_alignment = 1

[node name="CalmPercentageLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Calm Level: 75%"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "You sleep soundly. You wake up feeling great!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="BonusesTitle" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Bonuses Earned:"
horizontal_alignment = 1

[node name="BonusesContainer" type="VBoxContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer" type="Control" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContinueButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Continue"
